--- a/media/styles/teacher-task.css
+++ b/media/styles/teacher-task.css
@@ -437,7 +437,7 @@ textarea {
   left: 50%;
   width: 100%;
   height: 2px;
-  background-color: var(--dark-gray);
+  background-color: #010409;
   transform-origin: center;
   transition: transform 0.3s;
 }
@@ -455,7 +455,7 @@ textarea {
   text-align: center;
   font-weight: bold;
   font-size: 1rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid var(--dark-gray);
 }
 
 /* Messages container */
@@ -467,7 +467,7 @@ textarea {
   flex-direction: column;
   scroll-behavior: smooth;
   gap: 0.5rem;
-  color: #fff;
+  color: var(--white-text);
 }
 .chatbot-messages {
   scrollbar-width: thin;
@@ -505,12 +505,12 @@ textarea {
 .user-message {
   align-self: flex-start;
   background-color: rgba(0, 178, 33, 0.3);
-  color: #fff;
+  color: var(--white-text);
 }
 .bot-message {
   align-self: flex-end;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: #fff;
+  background-color: var(--dark-gray);
+  color: var(--white-text);
 }
 
 .chatbot-input {
@@ -525,7 +525,7 @@ textarea {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 .chatbot-input input {
-  color: #fff;
+  color: var(--white-text);
   padding: 0.6rem 1rem;
   border: none;
   outline: none;
@@ -534,7 +534,7 @@ textarea {
   background: rgba(255, 255, 255, 0.05);
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 4px;
-  color: #fff;
+  color: var(--white-text);
   border-radius: 2rem;
 }
 .chatbot-input button {
@@ -556,7 +556,7 @@ textarea {
   display: flex;
   gap: 4px;
   font-size: 1.5rem;
-  color: #ccc;
+  color: var(--gray-texts);
 }
 
 .typing-dots span {
